# so-assignments

2-minishell/: CMakeLists.txt
2-minishell/skel-windows/: CMakeLists.txt  cmd.c  cmd.cpp  cmd.h  main.c  main.cpp  parser.h  parser.tab.c  parser.tab.h  parser.y  parser.yy.c  utils-win.c  utils-win.cpp  utils.h
4-scheduler/: CMakeLists.txt  so_sheduler.c
4-scheduler/checker-win/: CMakeLists.txt
4-scheduler/checker-win/_test/: CMakeLists.txt
5-aws/: CMakeLists.txt  aws.c  test.sh
5-aws/checker-lin/: CMakeLists.txt
5-aws/checker-lin/_test/: CMakeLists.txt
5-aws/util/: CMakeLists.txt  util.h
5-aws/util/http-parser/: CMakeLists.txt
5-aws/util/http-parser/samples/: CMakeLists.txt
5-aws/util/lin/: CMakeLists.txt  sock_util.c  w_epoll.h
5-aws/util/lin/samples/: CMakeLists.txt
